# ML_Engineer_Task

./: .gitignore  Dockerfile  Makefile  README.md  app.py  cross_validate.py  data_preprocessing.py  endpoint_testing.ipynb  main.py  model_training.py  pyproject.toml  task_notes.md  train.py
.github/workflows/: ci.yml
config/: creds.toml  model.joblib  parameters.json  utils.py
model_training/: data_preprocessing.py  model_training.py
tests/: test_app.py  test_loading.py  test_model.py
