[tool.poetry]
name = "ml-engineer-task"
version = "0.1.0"
description = ""
authors = ["James Sellers <james.sellers@live.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
numpy = "^2.0.0"
xgboost = "^2.1.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
shap = "^0.46.0"
jupyter = "^1.0.0"
graphviz = "^0.20.3"
flask = "^3.0.3"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
